--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,17 @@
 /* 
     General Styles
 */
+body{
+    /*background-image: url("https://i.pinimg.com/originals/d1/17/0d/d1170db26690d9d62f68555fb8da70a3.jpg");*/
+    background-image: url("https://fondosmil.com/fondo/81747.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
 .miRow{
     width: 100%;
-    height: 400px;
+    height: 390px;
     overflow-x: scroll;
     overflow-y: hidden;
 }
